# inverted_pendulum_drive

./: README.md
code/: CMakeLists.txt
code/inc/: BNO055.h
code/src/: BNO055.cpp  main_alg.cpp
simulation/: pendulum_model.py  run_sim.py
